grammar/DeepLangParser.py
# Generated from grammar/DeepLang.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


# deeplang ANTLR grammar - generated


class DeepLangParser ( Parser ):

    grammarFileName = "DeepLang.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'return'", "'import'", "'print'", "'def'", 
                     "'if'", "'elif'", "'else'", "'while'", "'for'", "'in'", 
                     "'class'", "'or'", "'and'", "'not'", "'is'", "'None'", 
                     "'True'", "'False'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'+'", "'-'", "'*'", "'/'", "'%'", "'='", "'=='", "'!='", 
                     "'<'", "'<='", "'>'", "'>='", "'**'", "'//'", "'->'", 
                     "','", "':'", "'('", "')'", "'['", "']'", "'{'", "'}'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "TK_INT", "TK_FLOAT", 
                      "TK_STRING", "ID", "COMMENT", "WS", "NEWLINE", "PLUS", 
                      "MINUS", "STAR", "SLASH", "PERC", "EQ", "EQEQ", "NEQ", 
                      "LT", "LE", "GT", "GE", "POW", "FLOORDIV", "ARROW", 
                      "COMMA", "COLON", "LPAREN", "RPAREN", "LBRACK", "RBRACK", 
                      "LBRACE", "RBRACE", "INDENT", "DEDENT" ]

    RULE_program = 0
    RULE_stmtList = 1
    RULE_stmt = 2
    RULE_simple_stmt = 3
    RULE_small_stmt = 4
    RULE_assign_stmt = 5
    RULE_return_stmt = 6
    RULE_import_stmt = 7
    RULE_print_stmt = 8
    RULE_expr_stmt = 9
    RULE_compound_stmt = 10
    RULE_funcdef = 11
    RULE_paramList = 12
    RULE_param = 13
    RULE_if_stmt = 14
    RULE_while_stmt = 15
    RULE_for_stmt = 16
    RULE_classdef = 17
    RULE_expr = 18
    RULE_orExpr = 19
    RULE_andExpr = 20
    RULE_notExpr = 21
    RULE_comparison = 22
    RULE_arithExpr = 23
    RULE_term = 24
    RULE_factor = 25
    RULE_power = 26
    RULE_atom = 27
    RULE_callExpr = 28
    RULE_argList = 29
    RULE_indexing = 30
    RULE_listLiteral = 31
    RULE_matrixLiteral = 32
    RULE_type = 33

    ruleNames =  [ "program", "stmtList", "stmt", "simple_stmt", "small_stmt", 
                   "assign_stmt", "return_stmt", "import_stmt", "print_stmt", 
                   "expr_stmt", "compound_stmt", "funcdef", "paramList", 
                   "param", "if_stmt", "while_stmt", "for_stmt", "classdef", 
                   "expr", "orExpr", "andExpr", "notExpr", "comparison", 
                   "arithExpr", "term", "factor", "power", "atom", "callExpr", 
                   "argList", "indexing", "listLiteral", "matrixLiteral", 
                   "type" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    TK_INT=19
    TK_FLOAT=20
    TK_STRING=21
    ID=22
    COMMENT=23
    WS=24
    NEWLINE=25
    PLUS=26
    MINUS=27
    STAR=28
    SLASH=29
    PERC=30
    EQ=31
    EQEQ=32
    NEQ=33
    LT=34
    LE=35
    GT=36
    GE=37
    POW=38
    FLOORDIV=39
    ARROW=40
    COMMA=41
    COLON=42
    LPAREN=43
    RPAREN=44
    LBRACK=45
    RBRACK=46
    LBRACE=47
    RBRACE=48
    INDENT=49
    DEDENT=50

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stmtList(self):
            return self.getTypedRuleContext(DeepLangParser.StmtListContext,0)


        def EOF(self):
            return self.getToken(DeepLangParser.EOF, 0)

        def getRuleIndex(self):
            return DeepLangParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = DeepLangParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 68
            self.stmtList()
            self.state = 69
            self.match(DeepLangParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DeepLangParser.StmtContext)
            else:
                return self.getTypedRuleContext(DeepLangParser.StmtContext,i)


        def getRuleIndex(self):
            return DeepLangParser.RULE_stmtList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmtList" ):
                listener.enterStmtList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmtList" ):
                listener.exitStmtList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmtList" ):
                return visitor.visitStmtList(self)
            else:
                return visitor.visitChildren(self)




    def stmtList(self):

        localctx = DeepLangParser.StmtListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_stmtList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 74
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 43980674779966) != 0):
                self.state = 71
                self.stmt()
                self.state = 76
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def simple_stmt(self):
            return self.getTypedRuleContext(DeepLangParser.Simple_stmtContext,0)


        def compound_stmt(self):
            return self.getTypedRuleContext(DeepLangParser.Compound_stmtContext,0)


        def getRuleIndex(self):
            return DeepLangParser.RULE_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmt" ):
                listener.enterStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmt" ):
                listener.exitStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmt" ):
                return visitor.visitStmt(self)
            else:
                return visitor.visitChildren(self)




    def stmt(self):

        localctx = DeepLangParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_stmt)
        try:
            self.state = 79
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1, 2, 3, 14, 16, 17, 18, 19, 20, 21, 22, 26, 27, 43, 45]:
                self.enterOuterAlt(localctx, 1)
                self.state = 77
                self.simple_stmt()
                pass
            elif token in [4, 5, 8, 9, 11]:
                self.enterOuterAlt(localctx, 2)
                self.state = 78
                self.compound_stmt()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Simple_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def small_stmt(self):
            return self.getTypedRuleContext(DeepLangParser.Small_stmtContext,0)


        def NEWLINE(self):
            return self.getToken(DeepLangParser.NEWLINE, 0)

        def getRuleIndex(self):
            return DeepLangParser.RULE_simple_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSimple_stmt" ):
                listener.enterSimple_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSimple_stmt" ):
                listener.exitSimple_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSimple_stmt" ):
                return visitor.visitSimple_stmt(self)
            else:
                return visitor.visitChildren(self)




    def simple_stmt(self):

        localctx = DeepLangParser.Simple_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_simple_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self.small_stmt()
            self.state = 82
            self.match(DeepLangParser.NEWLINE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Small_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assign_stmt(self):
            return self.getTypedRuleContext(DeepLangParser.Assign_stmtContext,0)


        def return_stmt(self):
            return self.getTypedRuleContext(DeepLangParser.Return_stmtContext,0)


        def import_stmt(self):
            return self.getTypedRuleContext(DeepLangParser.Import_stmtContext,0)


        def print_stmt(self):
            return self.getTypedRuleContext(DeepLangParser.Print_stmtContext,0)


        def expr_stmt(self):
            return self.getTypedRuleContext(DeepLangParser.Expr_stmtContext,0)


        def getRuleIndex(self):
            return DeepLangParser.RULE_small_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSmall_stmt" ):
                listener.enterSmall_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSmall_stmt" ):
                listener.exitSmall_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSmall_stmt" ):
                return visitor.visitSmall_stmt(self)
            else:
                return visitor.visitChildren(self)




    def small_stmt(self):

        localctx = DeepLangParser.Small_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_small_stmt)
        try:
            self.state = 89
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 84
                self.assign_stmt()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 85
                self.return_stmt()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 86
                self.import_stmt()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 87
                self.print_stmt()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 88
                self.expr_stmt()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Assign_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(DeepLangParser.ID, 0)

        def EQ(self):
            return self.getToken(DeepLangParser.EQ, 0)

        def expr(self):
            return self.getTypedRuleContext(DeepLangParser.ExprContext,0)


        def getRuleIndex(self):
            return DeepLangParser.RULE_assign_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssign_stmt" ):
                listener.enterAssign_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssign_stmt" ):
                listener.exitAssign_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssign_stmt" ):
                return visitor.visitAssign_stmt(self)
            else:
                return visitor.visitChildren(self)




    def assign_stmt(self):

        localctx = DeepLangParser.Assign_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_assign_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            self.match(DeepLangParser.ID)
            self.state = 92
            self.match(DeepLangParser.EQ)
            self.state = 93
            self.expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Return_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(DeepLangParser.ExprContext,0)


        def getRuleIndex(self):
            return DeepLangParser.RULE_return_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturn_stmt" ):
                listener.enterReturn_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturn_stmt" ):
                listener.exitReturn_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReturn_stmt" ):
                return visitor.visitReturn_stmt(self)
            else:
                return visitor.visitChildren(self)




    def return_stmt(self):

        localctx = DeepLangParser.Return_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_return_stmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self.match(DeepLangParser.T__0)
            self.state = 97
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 43980674777088) != 0):
                self.state = 96
                self.expr()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Import_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(DeepLangParser.ID)
            else:
                return self.getToken(DeepLangParser.ID, i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(DeepLangParser.COMMA)
            else:
                return self.getToken(DeepLangParser.COMMA, i)

        def getRuleIndex(self):
            return DeepLangParser.RULE_import_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterImport_stmt" ):
                listener.enterImport_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitImport_stmt" ):
                listener.exitImport_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitImport_stmt" ):
                return visitor.visitImport_stmt(self)
            else:
                return visitor.visitChildren(self)




    def import_stmt(self):

        localctx = DeepLangParser.Import_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_import_stmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            self.match(DeepLangParser.T__1)
            self.state = 100
            self.match(DeepLangParser.ID)
            self.state = 105
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==41:
                self.state = 101
                self.match(DeepLangParser.COMMA)
                self.state = 102
                self.match(DeepLangParser.ID)
                self.state = 107
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Print_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LPAREN(self):
            return self.getToken(DeepLangParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(DeepLangParser.RPAREN, 0)

        def expr(self):
            return self.getTypedRuleContext(DeepLangParser.ExprContext,0)


        def getRuleIndex(self):
            return DeepLangParser.RULE_print_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrint_stmt" ):
                listener.enterPrint_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrint_stmt" ):
                listener.exitPrint_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrint_stmt" ):
                return visitor.visitPrint_stmt(self)
            else:
                return visitor.visitChildren(self)




    def print_stmt(self):

        localctx = DeepLangParser.Print_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_print_stmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            self.match(DeepLangParser.T__2)
            self.state = 109
            self.match(DeepLangParser.LPAREN)
            self.state = 111
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 43980674777088) != 0):
                self.state = 110
                self.expr()


            self.state = 113
            self.match(DeepLangParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Expr_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(DeepLangParser.ExprContext,0)


        def getRuleIndex(self):
            return DeepLangParser.RULE_expr_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr_stmt" ):
                listener.enterExpr_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr_stmt" ):
                listener.exitExpr_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr_stmt" ):
                return visitor.visitExpr_stmt(self)
            else:
                return visitor.visitChildren(self)




    def expr_stmt(self):

        localctx = DeepLangParser.Expr_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_expr_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            self.expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Compound_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def funcdef(self):
            return self.getTypedRuleContext(DeepLangParser.FuncdefContext,0)


        def if_stmt(self):
            return self.getTypedRuleContext(DeepLangParser.If_stmtContext,0)


        def while_stmt(self):
            return self.getTypedRuleContext(DeepLangParser.While_stmtContext,0)


        def for_stmt(self):
            return self.getTypedRuleContext(DeepLangParser.For_stmtContext,0)


        def classdef(self):
            return self.getTypedRuleContext(DeepLangParser.ClassdefContext,0)


        def getRuleIndex(self):
            return DeepLangParser.RULE_compound_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCompound_stmt" ):
                listener.enterCompound_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCompound_stmt" ):
                listener.exitCompound_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCompound_stmt" ):
                return visitor.visitCompound_stmt(self)
            else:
                return visitor.visitChildren(self)




    def compound_stmt(self):

        localctx = DeepLangParser.Compound_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_compound_stmt)
        try:
            self.state = 122
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [4]:
                self.enterOuterAlt(localctx, 1)
                self.state = 117
                self.funcdef()
                pass
            elif token in [5]:
                self.enterOuterAlt(localctx, 2)
                self.state = 118
                self.if_stmt()
                pass
            elif token in [8]:
                self.enterOuterAlt(localctx, 3)
                self.state = 119
                self.while_stmt()
                pass
            elif token in [9]:
                self.enterOuterAlt(localctx, 4)
                self.state = 120
                self.for_stmt()
                pass
            elif token in [11]:
                self.enterOuterAlt(localctx, 5)
                self.state = 121
                self.classdef()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncdefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(DeepLangParser.ID, 0)

        def LPAREN(self):
            return self.getToken(DeepLangParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(DeepLangParser.RPAREN, 0)

        def COLON(self):
            return self.getToken(DeepLangParser.COLON, 0)

        def NEWLINE(self):
            return self.getToken(DeepLangParser.NEWLINE, 0)

        def INDENT(self):
            return self.getToken(DeepLangParser.INDENT, 0)

        def stmtList(self):
            return self.getTypedRuleContext(DeepLangParser.StmtListContext,0)


        def DEDENT(self):
            return self.getToken(DeepLangParser.DEDENT, 0)

        def paramList(self):
            return self.getTypedRuleContext(DeepLangParser.ParamListContext,0)


        def ARROW(self):
            return self.getToken(DeepLangParser.ARROW, 0)

        def type_(self):
            return self.getTypedRuleContext(DeepLangParser.TypeContext,0)


        def getRuleIndex(self):
            return DeepLangParser.RULE_funcdef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncdef" ):
                listener.enterFuncdef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncdef" ):
                listener.exitFuncdef(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncdef" ):
                return visitor.visitFuncdef(self)
            else:
                return visitor.visitChildren(self)




    def funcdef(self):

        localctx = DeepLangParser.FuncdefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_funcdef)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            self.match(DeepLangParser.T__3)
            self.state = 125
            self.match(DeepLangParser.ID)
            self.state = 126
            self.match(DeepLangParser.LPAREN)
            self.state = 128
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==22:
                self.state = 127
                self.paramList()


            self.state = 130
            self.match(DeepLangParser.RPAREN)
            self.state = 133
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==40:
                self.state = 131
                self.match(DeepLangParser.ARROW)
                self.state = 132
                self.type_()


            self.state = 135
            self.match(DeepLangParser.COLON)
            self.state = 136
            self.match(DeepLangParser.NEWLINE)
            self.state = 137
            self.match(DeepLangParser.INDENT)
            self.state = 138
            self.stmtList()
            self.state = 139
            self.match(DeepLangParser.DEDENT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DeepLangParser.ParamContext)
            else:
                return self.getTypedRuleContext(DeepLangParser.ParamContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(DeepLangParser.COMMA)
            else:
                return self.getToken(DeepLangParser.COMMA, i)

        def getRuleIndex(self):
            return DeepLangParser.RULE_paramList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParamList" ):
                listener.enterParamList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParamList" ):
                listener.exitParamList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParamList" ):
                return visitor.visitParamList(self)
            else:
                return visitor.visitChildren(self)




    def paramList(self):

        localctx = DeepLangParser.ParamListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_paramList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 141
            self.param()
            self.state = 146
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==41:
                self.state = 142
                self.match(DeepLangParser.COMMA)
                self.state = 143
                self.param()
                self.state = 148
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(DeepLangParser.ID, 0)

        def COLON(self):
            return self.getToken(DeepLangParser.COLON, 0)

        def type_(self):
            return self.getTypedRuleContext(DeepLangParser.TypeContext,0)


        def EQ(self):
            return self.getToken(DeepLangParser.EQ, 0)

        def expr(self):
            return self.getTypedRuleContext(DeepLangParser.ExprContext,0)


        def getRuleIndex(self):
            return DeepLangParser.RULE_param

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParam" ):
                listener.enterParam(self)
